fixed approach page problems on safari

--- a/app/pages/page/page.scss
+++ b/app/pages/page/page.scss
@@ -20,6 +20,8 @@
 
 .mnd-page-overlay{
 	position: fixed;
+	top: 0px;
+	left: 0px;
 	min-width: 100%;
 	min-height: 100%;
 	opacity: 0.8;
